<resources>
    <string name="app_name">IFTTW</string>
    <string name="tab_text_1">Active Routines</string>
    <string name="tab_text_2">Inactive Routines</string>
    <string name="steps_counter">Steps Counter</string>
    <string name="phone_automation">Phone Automation</string>
    <string name="battery_low_management">Battery Low Management</string>
    <string name="reminder_notification">Reminder Notification</string>
    <string name="delete_routine">Delete Routine</string>
    <string name="activate_routine">Activate Routine</string>
    <string name="deactivate_routine">Deactivate Routine</string>
    <string name="condition">Condition</string>
    <string name="action">Action</string>
    <string name="save">Save</string>
    <string name="cond_time_radio">At a specific time</string>
    <string name="cond_datetime_radio">At a specific date and time</string>
    <string name="cond_sensor_detect">When sensor detect</string>
    <string name="cond_battery">When battery less than</string>
    <string name="act_get_notif_radio">Get reminder notification</string>
    <string name="act_mute_phone">Mute phone</string>
    <string name="act_unmute_phone">Unmute phone</string>
    <string name="act_off_wifi">Turn off wifi</string>
    <string name="act_on_wifi">Turn on wifi</string>
    <string name="act_weather_notif">Get notification on weather update</string>
    <string name="notif_msg_title_input">Notification Title</string>
    <string name="notif_msg_detail_input">Notification Detail Message</string>
    <string name="time_view">00 : 00</string>
    <string name="date_view">11 / 03 / 2020</string>
    <string name="senin">Senin</string>
    <string name="selasa">Selasa</string>
    <string name="rabu">Rabu</string>
    <string name="kamis">Kamis</string>
    <string name="jumat">Jumat</string>
    <string name="sabtu">Sabtu</string>
    <string name="minggu">Minggu</string>
    <string name="satukali">Satu kali</string>
    <string name="when_the_acceleration_changes_significantly">When the acceleration changes significantly</string>
    <string name="get_notification">Get Notification</string>
    <string name="accelerometer_sensor">Accelerometer Sensor</string>
</resources>
