<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reminder">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="320dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="32dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/condText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="50dp"
                    android:elegantTextHeight="false"
                    android:text="@string/condition"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/cond_battery"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:checked="true"
                        android:text="@string/cond_time_radio" />

                    <TextView
                        android:id="@+id/time_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/time_view"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <CheckBox
                                android:id="@+id/senin"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:text="@string/senin" />

                            <CheckBox
                                android:id="@+id/selasa"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:text="@string/selasa" />

                            <CheckBox
                                android:id="@+id/rabu"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="@string/rabu" />

                            <CheckBox
                                android:id="@+id/kamis"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="@string/kamis" />
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                            <CheckBox
                                android:id="@+id/jumat"
                                android:layout_width="79dp"
                                android:layout_height="wrap_content"
                                android:text="@string/jumat" />

                            <CheckBox
                                android:id="@+id/sabtu"
                                android:layout_width="79dp"
                                android:layout_height="wrap_content"
                                android:text="@string/sabtu" />

                            <CheckBox
                                android:id="@+id/minggu"
                                android:layout_width="82dp"
                                android:layout_height="wrap_content"
                                android:text="@string/minggu" />

                            <CheckBox
                                android:id="@+id/checkBox10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/satukali" />

                        </TableRow>

                    </TableLayout>

                    <RadioButton
                        android:id="@+id/cond_datetime_radio2"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="0"
                        android:checked="false"
                        android:text="@string/cond_datetime_radio" />

                    <TextView
                        android:id="@+id/time_view2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/time_view"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/date_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date_view"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="330dp"
                android:layout_height="286dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/actText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="40dp"
                    android:text="@string/action"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="400dp">

                    <RadioButton
                        android:id="@+id/act_of_wifi"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:checked="true"
                        android:text="@string/act_get_notif_radio" />

                    <RadioButton
                        android:id="@+id/mutePhone"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="0"
                        android:text="@string/act_mute_phone" />

                    <RadioButton
                        android:id="@+id/unmutePhone"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="0"
                        android:text="@string/act_unmute_phone" />

                    <RadioButton
                        android:id="@+id/onWifi"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="0"
                        android:text="@string/act_on_wifi" />

                    <RadioButton
                        android:id="@+id/offWifi"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="0"
                        android:text="@string/act_off_wifi" />

                    <RadioButton
                        android:id="@+id/radioButton5"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="0"
                        android:text="@string/act_weather_notif" />

                </RadioGroup>

                <EditText
                    android:id="@+id/notif_msg_title_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/notif_msg_title_input"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/notif_msg_detail_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/notif_msg_detail_input"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />

            </LinearLayout>

            <Button
                android:id="@+id/saveBattery"
                android:layout_width="93dp"
                android:layout_height="45dp"
                android:layout_marginLeft="135dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>