<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.FunctionalityActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accelerometer_sensor"/>

    <Button
        android:id="@+id/btn_phone_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_automation"/>

    <Button
        android:id="@+id/btn_battery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/battery_low_management"/>

    <Button
        android:id="@+id/btn_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_notification"/>

</LinearLayout>