<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reminder">

    <LinearLayout
        android:layout_width="349dp"
        android:layout_height="305dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <TextView
            android:id="@+id/condText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="50dp"
            android:elegantTextHeight="false"
            android:text="@string/condition"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/cond_time_radio"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:checked="true"
                android:text="@string/cond_time_radio" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="282dp"
        android:layout_marginTop="364dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/actText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="40dp"
            android:text="@string/action"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/act_get_notif_radio"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:checked="true"
            android:text="@string/act_get_notif_radio" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/notif_msg_input"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/saveReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="667dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>