<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reminder">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="320dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="32dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/condText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="50dp"
                    android:elegantTextHeight="false"
                    android:text="@string/condition"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/cond_sensor_detect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/when_the_acceleration_changes_significantly" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="330dp"
                android:layout_height="154dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/actText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="40dp"
                    android:text="@string/action"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_notif_accelerometer"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:checked="true"
                    android:text= "@string/get_notification" />

            </LinearLayout>

            <Button
<<<<<<< HEAD
                android:id="@+id/saveBattery"
=======
                android:id="@+id/saveAccelerometer"
>>>>>>> 0c013dc1410ca11852c29c0b954b1aaa9ad863b5
                android:layout_width="93dp"
                android:layout_height="45dp"
                android:layout_marginLeft="135dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="30dp"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>