<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reminder">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="253dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="32dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/condText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="50dp"
                    android:elegantTextHeight="false"
                    android:text="@string/condition"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/cond_battery"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:checked="true"
                        android:text="@string/cond_battery" />

                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/percentageBattery"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="130dp"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="%"
                        android:textSize="18dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="330dp"
                android:layout_height="154dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/actText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="50dp"
                    android:text="@string/action"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/act_of_wifi"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:checked="true"
                    android:text="@string/act_off_wifi" />

            </LinearLayout>

            <Button
                android:id="@+id/saveBattery"
                android:layout_width="93dp"
                android:layout_height="40dp"
                android:layout_marginLeft="140dp"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>